<resources>
    <string name="app_name">4Hire</string>
    <string name="title_activity_login_screen">LoginScreen</string>
    <string name="newuser">NewUser</string>
    <string name="edituser">EditUser</string>
    <string name="homepage">HomePage</string>
    <string name="mycomputers">My Computers</string>
    <string name="acceptbid">Accept Bid</string>
    <string name="myitembids">My Item Bids</string>
    <string name="lentout">Lent Out</string>
    <string name="myborrows">My Borrows</string>
    <string name="computerinfo">Computer Info</string>
    <string name="mybids">My Bids</string>
    <string name="accountsettings">Account Settings</string>
    <string name="logout">Log Out</string>

    <string name="title_activity_item_view">ItemView</string>
    <string name="location">Location</string>
    <string name="accept">Accept</string>
    <string name="okay">Okay</string>
    <string name="decline">Decline</string>
    <string name="cancel">Cancel</string>
    <string name="submit">Submit</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="bids">BIDS</string>
    <string name="addcomputer">Add Computer</string>
    <string name="make">Make</string>
    <string name="model">Model</string>
    <string name="harddrive">Hard Drive</string>
    <string name="memory">Memory</string>
    <string name="processor">Processor</string>
    <string name="os">OS</string>
    <string name="year">Year</string>
    <string name="baserate">Base Rate</string>
    <string name="description">Description</string>

</resources>
