<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Activities.AddComputer">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="16sp"
        android:text="ID# "
        android:id="@+id/lblId"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:fontFamily="sans-serif-light" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="15sp"
        android:paddingTop="10dp"
        android:text="Seller:"
        android:id="@+id/lblUsername"
        android:fontFamily="sans-serif-light"
        android:layout_below="@+id/lblId"
        android:layout_toStartOf="@+id/infoMake"
        android:paddingLeft="42dp"
        android:paddingRight="3dp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="15sp"
        android:paddingTop="10dp"
        android:paddingLeft="13dp"
        android:text="test"
        android:id="@+id/infoUsername"
        android:fontFamily="sans-serif-light"
        android:layout_alignTop="@+id/lblUsername"
        android:layout_toEndOf="@+id/lblStatus" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="15sp"
        android:paddingTop="10dp"
        android:text="Status:"
        android:id="@+id/lblStatus"
        android:layout_below="@+id/lblUsername"
        android:layout_alignParentStart="true"
        android:fontFamily="sans-serif-light"
        android:paddingLeft="35dp"
        android:paddingRight="5dp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="15sp"
        android:paddingTop="10dp"
        android:paddingLeft="13dp"
        android:text="test"
        android:id="@+id/infoStatus"
        android:layout_below="@+id/lblUsername"
        android:layout_toRightOf="@+id/lblStatus"
        android:layout_alignTop="@+id/lblStatus"
        android:fontFamily="sans-serif-light" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="15sp"
        android:paddingTop="10dp"
        android:text="Make:"
        android:id="@+id/lblMake"
        android:fontFamily="sans-serif-light"
        android:layout_below="@+id/lblStatus"
        android:layout_toStartOf="@+id/infoStatus"
        android:paddingRight="5dp" />
    <EditText
        android:layout_width="280dp"
        android:layout_height="35dp"
        android:background="@drawable/edittextlight"
        android:textSize="15sp"
        android:paddingLeft="12dp"
        android:hint="@string/make"
        android:id="@+id/infoMake"
        android:layout_marginTop="5dp"
        android:layout_toRightOf="@+id/lblMake"
        android:layout_alignTop="@+id/lblMake"
        android:fontFamily="sans-serif-light" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="15sp"
        android:paddingTop="10dp"
        android:text="Model:"
        android:id="@+id/lblModel"
        android:fontFamily="sans-serif-light"
        android:layout_below="@+id/infoMake"
        android:layout_toStartOf="@+id/infoMake"
        android:paddingRight="5dp" />
    <EditText
        android:layout_width="280dp"
        android:layout_height="35dp"
        android:background="@drawable/edittextlight"
        android:textSize="15sp"
        android:paddingLeft="12dp"
        android:hint="@string/model"
        android:id="@+id/infoModel"
        android:layout_marginTop="5dp"
        android:layout_toRightOf="@+id/lblModel"
        android:layout_alignTop="@+id/lblModel"
        android:layout_alignLeft="@id/infoMake"
        android:fontFamily="sans-serif-light" />

    <TextView
        android:layout_height="35dp"
        android:layout_width="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="15sp"
        android:paddingTop="10dp"
        android:layout_marginTop="5dp"
        android:text="Hard drive:"
        android:id="@+id/lblHarddive"
        android:layout_below="@+id/lblModel"
        android:fontFamily="sans-serif-light"
        android:paddingRight="5dp"
        android:paddingLeft="10dp" />
    <EditText
        android:layout_width="280dp"
        android:layout_height="35dp"
        android:background="@drawable/edittextlight"
        android:textSize="15sp"
        android:paddingLeft="12dp"
        android:hint="@string/harddrive"
        android:id="@+id/infoHarddrive"
        android:layout_marginTop="5dp"
        android:layout_toRightOf="@+id/lblHarddive"
        android:layout_alignTop="@+id/lblHarddive"
        android:layout_alignLeft="@id/infoModel"
        android:fontFamily="sans-serif-light" />

    <TextView
        android:layout_height="35dp"
        android:layout_width="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="15sp"
        android:paddingTop="10dp"
        android:layout_marginTop="5dp"
        android:text="Memory:"
        android:id="@+id/lblMemory"
        android:layout_below="@+id/lblHarddive"
        android:fontFamily="sans-serif-light"
        android:paddingRight="5dp"
        android:paddingLeft="22dp" />
    <EditText
        android:layout_width="280dp"
        android:layout_height="35dp"
        android:background="@drawable/edittextlight"
        android:textSize="15sp"
        android:paddingLeft="12dp"
        android:hint="@string/memory"
        android:id="@+id/infoMemory"
        android:layout_marginTop="5dp"
        android:layout_toRightOf="@+id/lblMemory"
        android:layout_alignTop="@+id/lblMemory"
        android:layout_alignLeft="@id/infoHarddrive"
        android:fontFamily="sans-serif-light" />

    <TextView
        android:layout_height="35dp"
        android:layout_width="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="15sp"
        android:paddingTop="10dp"
        android:layout_marginTop="5dp"
        android:text="Processor:"
        android:id="@+id/lblProcessor"
        android:layout_below="@+id/lblMemory"
        android:fontFamily="sans-serif-light"
        android:paddingRight="5dp"
        android:paddingLeft="10dp" />
    <EditText
        android:layout_width="280dp"
        android:layout_height="35dp"
        android:background="@drawable/edittextlight"
        android:textSize="15sp"
        android:paddingLeft="12dp"
        android:hint="@string/processor"
        android:id="@+id/infoProcessor"
        android:layout_marginTop="5dp"
        android:layout_toRightOf="@+id/lblProcessor"
        android:layout_alignTop="@+id/lblProcessor"
        android:layout_alignLeft="@id/infoMemory"
        android:fontFamily="sans-serif-light" />

    <TextView
        android:layout_height="35dp"
        android:layout_width="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="15sp"
        android:paddingTop="10dp"
        android:layout_marginTop="5dp"
        android:text="OS:"
        android:id="@+id/lblOs"
        android:layout_below="@+id/lblProcessor"
        android:fontFamily="sans-serif-light"
        android:paddingRight="5dp"
        android:paddingLeft="59dp" />
    <EditText
        android:layout_width="280dp"
        android:layout_height="35dp"
        android:background="@drawable/edittextlight"
        android:textSize="15sp"
        android:paddingLeft="12dp"
        android:hint="@string/os"
        android:id="@+id/infoOs"
        android:layout_marginTop="5dp"
        android:layout_toRightOf="@+id/lblOs"
        android:layout_alignTop="@+id/lblOs"
        android:layout_alignLeft="@id/infoProcessor"
        android:fontFamily="sans-serif-light" />

    <TextView
        android:layout_height="35dp"
        android:layout_width="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="15sp"
        android:paddingTop="10dp"
        android:layout_marginTop="5dp"
        android:text="Year:"
        android:id="@+id/lblYear"
        android:layout_below="@+id/lblOs"
        android:fontFamily="sans-serif-light"
        android:paddingRight="5dp"
        android:paddingLeft="48dp" />
    <EditText
        android:layout_width="280dp"
        android:layout_height="35dp"
        android:background="@drawable/edittextlight"
        android:textSize="15sp"
        android:paddingLeft="12dp"
        android:hint="@string/year"
        android:id="@+id/infoYear"
        android:layout_marginTop="5dp"
        android:layout_toRightOf="@+id/lblYear"
        android:layout_alignTop="@+id/lblYear"
        android:layout_alignLeft="@id/infoOs"
        android:fontFamily="sans-serif-light" />

    <TextView
        android:layout_height="35dp"
        android:layout_width="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="15sp"
        android:paddingTop="10dp"
        android:layout_marginTop="5dp"
        android:text="Base Rate:"
        android:id="@+id/lblBaserate"
        android:layout_below="@+id/lblYear"
        android:fontFamily="sans-serif-light"
        android:paddingRight="5dp"
        android:paddingLeft="11dp" />
    <EditText
        android:layout_width="280dp"
        android:layout_height="35dp"
        android:background="@drawable/edittextlight"
        android:textSize="15sp"
        android:paddingLeft="12dp"
        android:hint="@string/baserate"
        android:id="@+id/infoBaserate"
        android:layout_marginTop="5dp"
        android:layout_toRightOf="@+id/lblBaserate"
        android:layout_alignTop="@+id/lblBaserate"
        android:layout_alignLeft="@id/infoYear"
        android:fontFamily="sans-serif-light" />

    <TextView
        android:layout_height="35dp"
        android:layout_width="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="15sp"
        android:paddingTop="10dp"
        android:layout_marginTop="5dp"
        android:text="Description:"
        android:id="@+id/lblDescription"
        android:layout_below="@+id/lblBaserate"
        android:fontFamily="sans-serif-light"
        android:paddingRight="5dp"
        android:paddingLeft="2dp" />
    <EditText
        android:textAlignment="textStart"
        android:layout_width="280dp"
        android:layout_height="170dp"
        android:background="@drawable/edittextlight"
        android:textSize="15sp"
        android:paddingLeft="12dp"
        android:hint="@string/description"
        android:id="@+id/infoDescription"
        android:layout_marginTop="5dp"
        android:paddingTop="10dp"
        android:gravity="top"
        android:layout_toRightOf="@+id/lblDescription"
        android:layout_alignTop="@+id/lblDescription"
        android:layout_alignLeft="@id/infoBaserate"
        android:fontFamily="sans-serif-light"
        android:paddingRight="10dp" />

    <Button
        android:layout_width="110dp"
        android:layout_height="35dp"
        android:background="@drawable/edittextdark"
        android:textSize="15sp"
        android:text="Update"
        android:id="@+id/btnUpdate"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_below="@+id/infoDescription"
        android:textColor="#ffffff"
        android:fontFamily="sans-serif-light"
        android:layout_alignLeft="@+id/infoDescription"/>

    <Button
        android:layout_width="100dp"
        android:layout_height="35dp"
        android:background="@drawable/edittextdark"
        android:textSize="15sp"
        android:text="Delete"
        android:id="@+id/btnDelete"
        android:layout_marginTop="10dp"
        android:layout_toRightOf="@+id/btnUpdate"
        android:layout_below="@+id/infoDescription"
        android:layout_centerHorizontal="true"
        android:textColor="#ffffff"
        android:fontFamily="sans-serif-light"
        android:layout_alignRight="@+id/infoDescription"
        />

    <ImageButton
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:id="@+id/pictureBtn"
        android:background="@android:drawable/ic_menu_camera"
        android:layout_below="@+id/infoDescription"
        android:layout_alignEnd="@+id/lblProcessor" />

</RelativeLayout>
</ScrollView>
