...
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/edittextdark"
        android:text="ADD"
        android:textColor="#ffffff"
        android:fontFamily="sans-serif-light"
        android:id="@+id/addnewitem"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:textSize="15sp" />

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/myitemslist"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"
        android:layout_toStartOf="@+id/addnewitem"
        android:layout_above="@+id/addnewitem"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/textView"
...
