...
        android:id="@+id/myitems"
        android:title="My Computers"
        android:fontFamily="sans-serif-light" />

    <item
        android:id="@+id/myitembids"
        android:title="Received Bids"
        android:fontFamily="sans-serif-light" />

    <item
        android:id="@+id/lentout"
        android:title="Lent Out"
        android:fontFamily="sans-serif-light" />
...
